Archive2/0e/f63c504eb695f1/output
main.cpp:9:12: error: call to non-static member function without an object argument
  decltype(silly()) l = silly();
           ^~~~~
1 error generated.
