Archive2/0e/f63c504eb695f1/main.cpp
#include <iostream>

class S {
  auto silly() {
    auto fn = []{};
    return fn;
  }
public:
  decltype(silly()) l = silly();
};

int main() {
  
}
